formatted interface of register login

--- a/templates/registration/register_success.html
+++ b/templates/registration/register_success.html
@@ -13,9 +13,8 @@
             
             <div class="panel-body">
               <div class="col-lg-12 col-md-12 col-sm-12 success_reg_text" >
-              <h3 class="pull-right">Thank you for joining Philshore!</h3>
-              <h3 class="pull-right">An activation email will be sent to you as soon as possible.</h3>
-              <h4 class="pull-left"><a href="/index/">Click here to visit the Philshore Map.</a></h4>
+              <h3 class="pull-right">You are registered to Philshore's Online DTR.</h3>
+              <h4 class="pull-left"><a href="/index/">Click here to proceed to log in.</a></h4>
                 
               </div><!--/col-lg-12-->
 
@@ -35,12 +34,11 @@
           
         </div><!--/col-lg-5-->
         <div class="col-lg-5 col-md-5 col-sm-5 mtop_8em reg_side_div" >
-          <h1>Tidal Current Energy Integrated Resource Assessment</h1>
-          <h1>and Spatial Planning Tool</h1>
+          <h1>Philshore's Online Log Book</h1>
           <p align="justify">
-            PhilSHORE is a multi-site, multi-device and multi-criteria decision support tool designed to support the development of tidal current energy in the Philippines. Its platform is based on Geographic Information Systems (GIS) which allows for the collection, storage, processing, analyses and display of geospatial data. Combining GIS tools with open source web development applications, PhilSHORE becomes a webGIS-based marine spatial planning tool. 
+           This virtual log-book allows any Philshore employees to log in anywhere within the campus as long as they access it through Dilnet.
           </p>
-          <img src="{% static "accounts/img/webgis_shot.png"  %}" class="img-responsive" id="side_ctn_img" alt="Screenshot of the MSP Tool.">
+          <img src="{% static "accounts/img/webgis_shot.png"  %}" class="img-responsive" id="side_ctn_img" alt="Screenshot of the MSP Tool." style="display:none;">
         </div>
       </div> <!--/row-->
     </div><!--/container-->
