--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -8,7 +8,7 @@
     <div class="col-lg-4 col-md-4 col-sm-4 col-lg-offset-4 col-md-offset-4 col-sm-offset-4 mtop_10em">
       <div class="panel panel-info shadow" id="panelRegister">
         <div class="panel-heading">
-          <div class="panel-title"><h1>&nbsp;Log in</h1></div>
+          <div class="panel-title"><h1>&nbsp;Philshore's DTR Log in</h1></div>
         </div>
         <div class="panel-body">
           <div class="col-lg-12 col-md-12 col-sm-12">
