--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -17,7 +17,7 @@
                 <form id="user_form" method="post" action="/register/">
                     {% csrf_token %}
                     <div class="form-group">
-                      <div class="col-lg-6 col-md-6 col-sm-6">
+                      <div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-1">
                       {% if user_form.errors.username %}
                         <p id="p_username" class="has-error">
                           <label for="id_username">Username:</label>
@@ -72,13 +72,12 @@
         </div>
         <img src="{% static "accounts/img/logos.png"  %}" class="img-responsive" id="panel_reg_logos" alt="Collaborating Agencies.">
         </div>
-        <div class="col-lg-5 col-md-5 col-sm-5 mtop_8em reg_side_div">
-          <h1>Tidal Current Energy Integrated Resource Assessment</h1>
-          <h1>and Spatial Planning Tool</h1>
+        <div class="col-lg-5 col-md-5 col-sm-5 mtop_8em reg_side_div" >
+          <h1>Philshore's Online Log Book</h1>
           <p align="justify">
-            PhilSHORE is a multi-site, multi-device and multi-criteria decision support tool designed to support the development of tidal current energy in the Philippines. Its platform is based on Geographic Information Systems (GIS) which allows for the collection, storage, processing, analyses and display of geospatial data.Combining GIS tools with open source web development applications, PhilSHORE becomes a webGIS-based marine spatial planning tool. 
+           This virtual log-book allows any Philshore employees to log in anywhere within the campus as long as they access it through Dilnet.
           </p>
-          <img src="{% static "accounts/img/webgis_shot.png"  %}" class="img-responsive" id="side_ctn_img" alt="Screenshot of the MSP Tool.">
+          <img src="{% static "accounts/img/webgis_shot.png"  %}" class="img-responsive" id="side_ctn_img" alt="Screenshot of the MSP Tool." style="display:none;">
         </div>
       </div> <!--/row-->
     </div><!--/container-->
