--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -64,8 +64,8 @@
                 </div>
 
             </div>
-                <div class="col-lg-12" id="reg_btn_div">
-                  <button id="regButton" type="" value="Sign up" class="btn btn-success btn_width" click="regValidate()">Register</button>         
+                <div class="col-lg-6 col-lg-offset-3 " id="reg_btn_div">
+                  <button id="regButton" type="" value="Sign up" class="btn btn-success btn-block" click="regValidate()">Register</button>         
                 </div>
             </form>
           </div>
