formatted registration title

--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -7,7 +7,7 @@
         <div class="col-lg-5 col-md-5 col-sm-5 col-lg-offset-1 mtop_8em" id="main_panel_div">
           <div class="panel panel-info shadow" id="panelRegister">
             <div class="panel-heading">
-              <div class="panel-title"><h1><span><img class="logo_size" src="{% static "base/img/PhilSHORE Logo.png"  %}" alt="philshore logo"></span>&nbsp;Register with PhilSHORE</h1></div>
+              <div class="panel-title"><h1><span><img class="logo_size" src="{% static "base/img/PhilSHORE Logo.png"  %}" alt="philshore logo"></span>&nbsp;Register with PhilSHORE's DTR</h1></div>
             </div>
             
             <div class="panel-body">
@@ -72,7 +72,7 @@
         </div>
         <img src="{% static "accounts/img/logos.png"  %}" class="img-responsive" id="panel_reg_logos" alt="Collaborating Agencies.">
         </div>
-        <div class="col-lg-5 col-md-5 col-sm-5 mtop_8em reg_side_div" >
+        <div class="col-lg-4 col-md-4 col-sm-4 mtop_8em reg_side_div" >
           <h1>Philshore's Online Log Book</h1>
           <p align="justify">
            This virtual log-book allows any Philshore employees to log in anywhere within the campus as long as they access it through Dilnet.
