added day column

--- a/templates/profile/logs.html
+++ b/templates/profile/logs.html
@@ -27,6 +27,7 @@
             <table class="table" id="example">
                 <thead>
                     <th>Date</th>
+                    <th>Day</th>
                     <th>Time In</th>
                     <th>Time Out</th>
                 </thead>
@@ -34,6 +35,7 @@
                 {% for timein in timeInList %}
                     <tr id="{{ timein.dateIn|date:'n_j_Y' }}"> 
                         <td>{{ timein.dateIn }}</td>
+                        <td>{{ timein.dateIn|date:"l" }}</td>
                         <td>{{ timein.timeIn|date:"f:s" }}</td>
                     </tr>
                 {% endfor %}
