--- a/templates/profile/logs.html
+++ b/templates/profile/logs.html
@@ -68,6 +68,7 @@
             var idOfDataTimeout = "{{ timeout.dateOut|date:'n_j_Y' }}_out";
             var timein = $("#{{ timeout.dateOut|date:'n_j_Y' }}_in").val();
             var duration = {{ timein|timesince:timeout }}
+            console.log(timein);
             $("#{{ timeout.dateOut|date:'n_j_Y' }}").append("<td id="+idOfDataTimeout+">{{timeout.timeOut|date:'f:s'}}</td><td>"+duration+"</td>");
         {% endfor %}
 
