--- a/templates/profile/logs.html
+++ b/templates/profile/logs.html
@@ -66,7 +66,7 @@
          var n_j_y = date.getMonth()+1+"_"+date.getDate()+"_"+date.getFullYear();
         {% for timeout in timeOutList%}
             var idOfDataTimeout = "{{ timeout.dateOut|date:'n_j_Y' }}_out";
-            var timein = $("#{{ timeout.dateOut|date:'n_j_Y' }}_in").val();
+            var timein = $("#{{ timeout.dateOut|date:'n_j_Y' }}_in").text();
             var duration = {{ timein|timesince:timeout }}
             console.log(timein);
             $("#{{ timeout.dateOut|date:'n_j_Y' }}").append("<td id="+idOfDataTimeout+">{{timeout.timeOut|date:'f:s'}}</td><td>"+duration+"</td>");
