--- a/templates/profile/logs.html
+++ b/templates/profile/logs.html
@@ -67,8 +67,10 @@
         {% for timeout in timeOutList%}
             var idOfDataTimeout = "{{ timeout.dateOut|date:'n_j_Y' }}_out";
             var timein = $("#{{ timeout.dateOut|date:'n_j_Y' }}_in").text();
-            var duration = new Date("June 1, 2015 "+ timein);
-            console.log(duration)
+            var durationIn = new Date("{{ timeout.dateOut}} "+ timein);
+            var durationOut = new Date("{{ timeout.dateOut}} {{timeout.timeOut|date:'f:s'}}");
+            var duration = ((durationOut.getMinutes()/ 60) + durationOut.getHours())-((durationIn.getMinutes()/ 60) + durationIn.getHours()) 
+            console.log(duration);
             $("#{{ timeout.dateOut|date:'n_j_Y' }}").append("<td id="+idOfDataTimeout+">{{timeout.timeOut|date:'f:s A'}}</td><td>"+duration+"</td>");
         {% endfor %}
 
