--- a/templates/profile/logs.html
+++ b/templates/profile/logs.html
@@ -68,7 +68,9 @@
             var idOfDataTimeout = "{{ timeout.dateOut|date:'n_j_Y' }}_out";
             var timein = $("#{{ timeout.dateOut|date:'n_j_Y' }}_in").text();
             var durationIn = new Date("{{ timeout.dateOut}} "+ timein);
+            console.log(durationIn)
             var durationOut = new Date("{{ timeout.dateOut}} {{timeout.timeOut|date:'f:s'}}");
+            console.log(durationOut)
             var duration = ((durationOut.getMinutes()/ 60) + durationOut.getHours())-((durationIn.getMinutes()/ 60) + durationIn.getHours()) 
             console.log(duration);
             $("#{{ timeout.dateOut|date:'n_j_Y' }}").append("<td id="+idOfDataTimeout+">{{timeout.timeOut|date:'f:s A'}}</td><td>"+duration+"</td>");
