--- a/templates/profile/logs.html
+++ b/templates/profile/logs.html
@@ -68,12 +68,12 @@
             var idOfDataTimeout = "{{ timeout.dateOut|date:'n_j_Y' }}_out";
             var timein = $("#{{ timeout.dateOut|date:'n_j_Y' }}_in").text();
             var durationIn = new Date("{{ timeout.dateOut}} "+ timein);
-            console.log(durationIn)
+            // console.log(durationIn)
             var durationOut = new Date("{{ timeout.dateOut}} {{timeout.timeOut|date:'f:s A'}}");
-            console.log(durationOut)
+            // console.log(durationOut)
             var duration = ((durationOut.getMinutes()/ 60) + durationOut.getHours())-((durationIn.getMinutes()/ 60) + durationIn.getHours()) 
-            console.log(duration);
-            $("#{{ timeout.dateOut|date:'n_j_Y' }}").append("<td id="+idOfDataTimeout+">{{timeout.timeOut|date:'f:s A'}}</td><td>"+duration+"</td>");
+            // console.log(duration);
+            $("#{{ timeout.dateOut|date:'n_j_Y' }}").append("<td id="+idOfDataTimeout+">{{timeout.timeOut|date:'f:s A'}}</td><td>"+duration.toFixed(3)+" Hours </td>");
         {% endfor %}
 
         if($("#"+n_j_y).length==1){
