added duration column

--- a/templates/base/base_profile.html
+++ b/templates/base/base_profile.html
@@ -56,13 +56,8 @@
       <h3 class="white">PhilSHORE {{page_title}}</h3>
     </div>
     <div class="navbar-collapse collapse nav_admin">
-    <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#"><span class="fa fa-user"></span> {{user.username}} <span class="caret"></span></a>
-          <ul id="g-account-menu" class="dropdown-menu" role="menu">
-            <li><a href="/profile/update/">Update Profile</a></li>
-          </ul>
-        </li>
+      <ul class="nav navbar-nav navbar-right">
+        <li><i class="fa fa-user"> {{user.username}}</i></li>
         <li><a href="/login/logout/"><i class="fa fa-lock"></i> Logout</a></li>
       </ul>
     </div>
