--- a/templates/base/base_profile.html
+++ b/templates/base/base_profile.html
@@ -77,6 +77,26 @@
     </div>
   </div>
 </div>
+<div class="modal" id="timeoutModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 class="modal-title">Add Widget</h4>
+            </div>
+            <div class="modal-body"> 
+                Are you sure you want to timeout? 
+                 <button class="btn btn-primary disabled btn-block" style="margin-top:1.15em;" id="logOut">Time Out</button> 
+            </div>
+            <div class="modal-footer">
+                <a href="#" data-dismiss="modal" class="btn">Close</a>
+                <a href="#" class="btn btn-primary">Save changes</a>
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dalog -->
+</div>
 </body>
 	<!-- script references -->
 	<script type = "text/javascript" src="{% static "base/js/bootstrap.min.js"  %}"></script>
