--- a/templates/profile/logs.html
+++ b/templates/profile/logs.html
@@ -78,11 +78,11 @@
 
         if($("#"+n_j_y).length==1){
             $("#logIn").addClass("disabled");
-            $("#logOut").removeClass("disabled");
+            $("#logOut_modal").removeClass("disabled");
         }
         if($("#"+n_j_y+"_out").length==1){
             $("#logIn").addClass("disabled");
-            $("#logOut").addClass("disabled");
+            $("#logOut_modal").addClass("disabled");
         }
 
 
