--- a/templates/base/base_profile.html
+++ b/templates/base/base_profile.html
@@ -81,16 +81,13 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h4 class="modal-title">Add Widget</h4>
             </div>
             <div class="modal-body"> 
                 Are you sure you want to timeout? 
-                 <button class="btn btn-primary disabled btn-block" style="margin-top:1.15em;" id="logOut">Time Out</button> 
+                 <button class="btn btn-primary btn-block" style="margin-top:1.15em;" id="logOut">Time Out</button> 
             </div>
             <div class="modal-footer">
-                <a href="#" data-dismiss="modal" class="btn">Close</a>
-                <a href="#" class="btn btn-primary">Save changes</a>
+                <button data-dismiss="modal" class="btn btn-success" id="cancel">Cancel</button>
             </div>
         </div>
         <!-- /.modal-content -->
@@ -99,6 +96,12 @@
 </div>
 </body>
 	<!-- script references -->
+  <script>
+    $("#cancel").on("click", function(){
+      $("#timeoutModal").hide();
+
+    });
+  </script>
 	<script type = "text/javascript" src="{% static "base/js/bootstrap.min.js"  %}"></script>
 	<script type = "text/javascript" src="{% static "accounts/profile/js/profile.js"  %}"></script>
 </html>
