fixed name in header bar

--- a/templates/base/base_profile.html
+++ b/templates/base/base_profile.html
@@ -57,7 +57,7 @@
     </div>
     <div class="navbar-collapse collapse nav_admin">
       <ul class="nav navbar-nav navbar-right">
-        <li><i class="fa fa-user"> {{user.username}}</i></li>
+        <li><a href="#"><i class="fa fa-user"></i> {{user.username}}</a></li>
         <li><a href="/login/logout/"><i class="fa fa-lock"></i> Logout</a></li>
       </ul>
     </div>
