--- a/templates/registration/register_success.html
+++ b/templates/registration/register_success.html
@@ -14,7 +14,7 @@
             <div class="panel-body">
               <div class="col-lg-12 col-md-12 col-sm-12 success_reg_text" >
               <h3 class="pull-right">You are registered to Philshore's Online DTR.</h3>
-              <h4 class="pull-left"><a href="/index/">Click here to proceed to log in.</a></h4>
+              <h4 class="pull-left"><a href="/login/">Click here to proceed to log in.</a></h4>
                 
               </div><!--/col-lg-12-->
 
