--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -87,7 +87,7 @@
                     <div class="col-lg-3">
                         <button class="btn btn-success btn-circle btn-xl">
                             <span>
-                                <img id="dash_logo" src="img/PhilSHORE Logo.png"/>
+                                <img id="dash_logo" src="{% static "base/img/PhilSHORE Logo.png"  %}"/>
                             </span>
                         </button>
                     </div>
