added links to logged in cards

--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -61,16 +61,16 @@
                 <div class="col-lg-8 col-lg-offset-2 btn-top">
                 <center>
                     <div class="col-lg-3">
-                        <button id="1" class="btn out btn-circle btn-xl"> ian</button>
+                        <a href="/profile/admin_logs/1/"><button id="1" class="btn out btn-circle btn-xl"> ian</button></a>
                     </div>
                     <div class="col-lg-3">
-                        <button id="4" class="btn out btn-circle btn-xl"> mike</button>
+                        <a href="/profile/admin_logs/4/"><button id="4" class="btn out btn-circle btn-xl"> mike</button></a>
                     </div>
                     <div class="col-lg-3">
-                        <button id="3" class="btn out btn-circle btn-xl"> toots</button>
+                        <a href="/profile/admin_logs/3/"><button id="3" class="btn out btn-circle btn-xl"> toots</button></a>
                     </div>
                     <div class="col-lg-3">
-                        <button id="2" class="btn out btn-circle btn-xl"> cham</button>
+                        <a href="/profile/admin_logs/2/"><button id="2" class="btn out btn-circle btn-xl"> cham</button></a>
                     </div>
                 </center>
                 </div>
