added back to dashboard button

--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -86,7 +86,7 @@
                         <button class="btn out btn-circle btn-xl"> oliver</button>
                     </div>
                     <div class="col-lg-3">
-                        <button class="btn out btn-circle btn-xl">
+                        <button class="btn btn-warning btn-circle btn-xl">
                             <span>
                                 <img id="dash_logo" src="{% static "base/img/PhilSHORE Logo.png"  %}"/>
                             </span>
