--- a/templates/profile/logs.html
+++ b/templates/profile/logs.html
@@ -5,12 +5,15 @@
 {% block content %}
 <!--edited-->
    <!--DataTables-->
-    <link href="http://cdn.datatables.net/1.10.7/css/jquery.dataTables.css" rel="stylesheet">
+<link href="http://cdn.datatables.net/1.10.7/css/jquery.dataTables.css" rel="stylesheet">
 <script type="text/javascript" src="{% static "base/js/jquery.dataTables.min.js"  %}"></script>
 <script type="text/javascript" src="{% static "base/js/dataTables.bootstrap.js"  %}"></script>
   <div class="container">
     <div class="row">
         <div class="col-lg-12">
+            {% if user.is_staff %}
+            <a href="/profile/dashboard/"><button class="btn btn-success"> Go to Dashboard</button></a>
+            {% endif %}
             <div class="col-lg-6">
                 <h3>You're logged in as {{user.username}}.</h3>
             </div>
