--- a/templates/profile/logs.html
+++ b/templates/profile/logs.html
@@ -16,6 +16,7 @@
             {% endif %}
             <div class="col-lg-6">
                 <h3>You're logged in as {{user.username}}.</h3>
+                <h5>{{client.username}} Logs </h5>
             </div>
             <div class="col-lg-6">
                 <div class="col-lg-4 pull-right">
