--- a/templates/profile/logs.html
+++ b/templates/profile/logs.html
@@ -11,16 +11,19 @@
   <div class="container">
     <div class="row">
         <div class="col-lg-12">
-            {% if user.is_staff %}
-            <a href="/profile/dashboard/"><button class="btn btn-success"> Go to Dashboard</button></a>
-            {% endif %}
+
             <div class="col-lg-6">
-                <h3>You're logged in as {{user.username}}.</h3>
+            <h3>You're logged in as {{user.username}}.</h3>
             {% if user.is_staff %}    
-                <h5>{{client.username}} Logs </h5>
+                <h4>{{client.first_name}} Logs </h4>
             {% endif %}
             </div>
             <div class="col-lg-6">
+                {% if user.is_staff %}  
+                <div class="col-lg-4 pull-right">
+                     <a href="/profile/dashboard/"> <button class="btn btn-success btn-block" style="margin-top:1.15em;" >Go to Dashboard</button></a>
+                </div>
+                {% else %}
                 <div class="col-lg-4 pull-right">
                     <button class="btn btn-primary disabled btn-block" style="margin-top:1.15em;" id="logOut_modal">Time Out</button> 
                 </div>
@@ -28,6 +31,8 @@
                 <div class="col-lg-4 pull-right">
                     <button class="btn btn-warning btn-block" style="margin-top:1.15em;" id="logIn" >Time In</button>             
                 </div>
+
+                {% endif %}
             </div>
             <div class="col-lg-10 col-lg-offset-1">
             <table class="table" id="example">
