--- a/templates/base/base_profile.html
+++ b/templates/base/base_profile.html
@@ -59,7 +59,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>         
-      <a class="navbar-brand" href="/dashboard/"><span><img id="dash_logo" src="{% static "base/img/PhilSHORE Logo.png"  %}"/></span></a>
+      <a class="navbar-brand" href="/profile/dashboard/"><span><img id="dash_logo" src="{% static "base/img/PhilSHORE Logo.png"  %}"/></span></a>
       <h3 class="white">PhilSHORE {{page_title}}</h3>
     </div>
     <div class="navbar-collapse collapse nav_admin">
