added my records to admin

--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -59,6 +59,7 @@
         <div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-1">
                 {% if admin.is_superuser %}
                 <strong><h1>Welcome, {{admin.username}}!</h1></strong>
+                <span><a href="/profile/"><button class="btn btn-warning">View my Records</button></span>
                 <div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-1 btn-top">
                 <h3>PhilSHORE</h3>
                 <center>
