--- a/templates/profile/logs.html
+++ b/templates/profile/logs.html
@@ -23,7 +23,8 @@
                 <div class="col-lg-4 pull-right">
                      <a href="/profile/dashboard/"> <button class="btn btn-success btn-block" style="margin-top:1.15em;" >Go to Dashboard</button></a>
                 </div>
-                {% else %}
+                {% endif %}
+                {% if user.username == client.username %}
                 <div class="col-lg-4 pull-right">
                     <button class="btn btn-primary disabled btn-block" style="margin-top:1.15em;" id="logOut_modal">Time Out</button> 
                 </div>
@@ -31,7 +32,6 @@
                 <div class="col-lg-4 pull-right">
                     <button class="btn btn-warning btn-block" style="margin-top:1.15em;" id="logIn" >Time In</button>             
                 </div>
-
                 {% endif %}
             </div>
             <div class="col-lg-10 col-lg-offset-1">
@@ -87,7 +87,7 @@
             
             if( hin >= 12.00 && hin <= 13.00 ){
                 duration = hout - 13.00;
-                
+
                 if(duration < 0){
                     duration = 0.0;
                 }
