added dropdown in registration / project

--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -57,8 +57,11 @@
                       </p>
 
                       <p id="p_organization">
-                        <label for="id_organization">Component:</label>
-                        <input id="id_component" maxlength="100" name="component" placeholder="Component" type="text" class="form-control" required />
+                        <label for="id_organization">Project:</label>
+                        <select id="id_component" name="component" type="text" class="form-control" required>
+                          <option value="philshore">PhilSHORE</option>
+                          <option value="remap">REMAP</option>
+                      </select>
                       </p>
                     </div>
                 </div>
