fixed duration algo

--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -150,6 +150,7 @@
         $("#{{timein.userId}}").removeClass("out");
         $("#{{timein.userId}}").addClass("btn-success");
     {% endfor %}
+        console.log("{{data_dict}}");
 </script>
 
 {% endblock %}
