changed username to first_name dashboard

--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -150,7 +150,7 @@
         $("#{{timein.userId}}").removeClass("out");
         $("#{{timein.userId}}").addClass("btn-success");
     {% endfor %}
-        console.log("{{data_dict}}");
+        console.log("{{data_dict|safe}}");
 </script>
 
 {% endblock %}
