--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -154,7 +154,7 @@
         $("#{{timein.userId}}").addClass("btn-success");
     {% endfor %}
     var userData = {{data_dict | safe}}
-    console.log(userData.user);
+    console.log(typeof(userData.user));
     for(var i=0; i < userData.user.length; i++){
         console.log(userData.user);
     }
