--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -153,7 +153,7 @@
         $("#{{timein.userId}}").removeClass("out");
         $("#{{timein.userId}}").addClass("btn-success");
     {% endfor %}
-    var userData = "{{data_dict|safe}}"
+    var userData = {{data_dict|safe}}
     console.log(userData);
     for(var i=0; i < userData.user.length; i++){
         console.log(userData.user);
