--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -63,6 +63,9 @@
                 <div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-1 btn-top">
                 <h3>PhilSHORE</h3>
                 <center>
+                <div id="philshore">
+
+                </div>
                 <!--
                     {% for user in users %}
                         {% if user.id < 8 %}
@@ -78,6 +81,9 @@
                 <div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-1 btn-top">
                 <h3>REMAP</h3>
                 <center>
+                <div id="remap">
+                </div>
+                <!--
                     {% for user in users %}
                         {% if user.id > 7 %}
                         <div class="col-lg-4 col-md-4 col-sm-1">
@@ -85,6 +91,7 @@
                         </div>
                         {% endif %}
                     {% endfor %}
+                -->
                 </center>
                 </div>
                 {% elif admin.is_staff %}
@@ -93,13 +100,8 @@
                 <div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-1 btn-top">
                 <h3>REMAP</h3>
                 <center>
-                    {% for user in users %}
-                        {% if user.id > 7 %}
-                        <div class="col-lg-4 col-md-4 col-sm-1">
-                            <a href="/profile/admin_logs/{{user.id}}/"><button id="{{user.id}}" class="btn out btn-circle btn-xl"> {{user.first_name|upper }}</button></a>
-                        </div>
-                        {% endif %}
-                    {% endfor %}
+                    <div id="remap">
+                    </div>
                 </center>
                 </div>
                 {% endif %}
@@ -153,10 +155,10 @@
         $("#{{timein.userId}}").removeClass("out");
         $("#{{timein.userId}}").addClass("btn-success");
     {% endfor %}
-    var userData = "{{data_dict}}".replace(/&quot;/g,"\"")
-    console.log(userData);
+    var userData = {{data_dict|safe}};
     for(var i=0; i < userData.user.length; i++){
-        console.log(userData.user);
+        $("#"+String(userData.user[i].component)).append('<div class="col-lg-4 col-md-4 col-sm-1"><a href="/profile/admin_logs/'+userData.user[i].id+'/"><button id="'+userData.user[i].id+'" class="btn out btn-circle btn-xl">'+ userData.user[i].first_name+'</button></a></div>');
+        //console.log(userData.user[i]);
     }
 </script>
 
