--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -136,7 +136,7 @@
     var userData = {{data_dict|safe}};
     console.log(userData);
     for(var i=0; i < userData.user.length; i++){
-        $("#"+String(userData.user[i].component)).append('<div class="col-lg-4 col-md-4 col-sm-1"><a href="/profile/admin_logs/'+userData.user[i].id+'/"><button id="'+userData.user[i].id+'" class="btn out btn-circle btn-xl">'+ userData.user[i].first_name+'</button></a></div>');
+        $("#"+String(userData.user[i].component)).append('<div class="col-lg-4 col-md-4 col-sm-1"><a href="/profile/admin_logs/'+userData.user[i].id+'/"><button id="'+userData.user[i].id+'" class="btn out btn-circle btn-xl">'+ userData.user[i].first_name.toUpperCase()+'</button></a></div>');
     }
     {% for timein in timeInList%}
         $("#{{timein.userId}}").removeClass("out");
