--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -32,6 +32,7 @@
       width: 100%;
       height: 7em;
       padding: 10px 16px;
+      margin-top: 0.5em;
       font-size: 24px;
       line-height: 1.33;
       border-radius: 0em;
